# algorithms

./: .gitignore  README.md  Readme.md  Readme_new.md  amountWithCoins.cpp  binaryMinHeap.hpp  binarySearchTree.hpp  binary_search.cpp  binary_search.hpp  binomialCoefficient.cpp  binomialCoefficient.hpp  bstInorderSuccessor.cpp  bstTraversals.cpp  common.mk  droneFlightPlanner.hpp  equalTree.cpp  knapsackProblem.hpp  lowestCommonAncestor.cpp  main.cpp  nonRelativeNodes.cpp  nonRelativeNodes.hpp  pascalsTriangle.cpp  productAllNumsExceptItself.cpp  productAllNumsExceptItself.hpp  sentenceReverse.cpp  sentenceReverse.hpp  set_up.md  stackFromQueue.cpp  stackFromQueue.hpp  stackUsingLinkedList.hpp  useful_links.txt
algorithms.xcodeproj/: project.pbxproj
algorithms.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
algorithms/algorithms/: QueueFromStack.cpp  QueueFromStack.hpp  amountWithCoins.cpp  amountWithCoins.hpp  binaryMinHeap.cpp  binarySearchTree.cpp  binarySearchTree.hpp  binaryTree.cpp  binaryTree.hpp  binomialCoefficient.cpp  bstInorderSuccessor.cpp  bstInorderSuccessor.hpp  bstTraversals.cpp  bstTraversals.hpp  bstWithParent.cpp  bstWithParent.hpp  countElementsInArray.cpp  countElementsInArray.hpp  droneFlightPlanner.cpp  equalTree.cpp  equalTree.hpp  factorial_fibonacci.cpp  hopSomeStairs.cpp  hopSomeStairs.hpp  knapsackProblem.cpp  lowestCommonAncestor.cpp  lowestCommonAncestor.hpp  main.cpp  maxProfitInStock.cpp  maxProfitInStock.hpp  nonRelativeNodes.cpp  pairs.cpp  pairs.hpp  pascalsTriangle.cpp  productAllNumsExceptItself.cpp  queueUsingLinkedList.cpp  queueUsingLinkedList.hpp  sentenceReverse.cpp  stackFromQueue.cpp  stackFromQueue.hpp  (+2 more)
algorithms/algorithms.xcodeproj/: project.pbxproj
alphabetic_numbers/: alphabetic_numbers.cpp  alphabetic_numbers.hpp  main.cpp
arrays/array_from_array/: CMakeLists.txt  main.cpp
arrays/count_distinct_elements/: main.cpp
arrays/max_burglary/: main.cpp
arrays/merge_lists_median/: CMakeLists.txt  merge_lists_median.hpp
arrays/non_decreasing_interval/: non_decreasing_interval.cpp
arrays/pair_with_sum/: CMakeLists.txt  main.cpp
arrays/pairs/: pairs.cpp
arrays/products_in_array/: main.cpp
arrays/stock_prices/: CMakeLists.txt  main.cpp  max_profit_in_stock.cpp
arrays/two_arrays_pairs/: main.cpp
biggest_interval/: CMakeLists.txt  main.cpp
biggest_interval/include/: biggest_interval.hpp
biggest_interval/src/: biggest_interval.cpp
binary_search/: CMakeLists.txt  binary_search.cpp  main.cpp
bit_manipulations/bits_in_integer/: bits_in_integer.cpp
bit_manipulations/max_without_comparison/: max_without_comparison.hpp
bits_in_integer/: CMakeLists.txt  bits_in_integer.cpp  bits_in_integer.hpp  main.cpp
c++/biggest_interval/: Makefile  main.cpp
c++/binary_heap/: Readme.md
c++/binary_search/: CMakeLists.txt  Makefile  binary_search.cpp  binary_search.hpp  main.cpp
c++/dinner_party/: Makefile  main.cpp
c++/stack_and_queue/queue_stack/: CMakeLists.txt  Makefile  Readme.md  main.cpp  test.cpp
c++/stack_and_queue/queue_stack/include/: queue_stack.hpp
count_distinct_elements/: count_elements.cpp  main.cpp
detect_remove_loop_linked_list/: CMakeLists.txt  main.cpp
detect_remove_loop_linked_list/include/: detect_remove_loop.hpp
detect_remove_loop_linked_list/src/: detect_remove_loop.cpp
dinner_party/: CMakeLists.txt
drone_flight_planner/: drone_flight_planner.hpp
dynamic_programming/: hopSomeStairs.cpp
graphs/application/bfs_application/a_shortest_path/: CMakeLists.txt  main.cpp
graphs/application/bfs_application/a_shortest_path/include/: shortest_path_value.hpp
graphs/application/dfs_application/topological_sort/: CMakeLists.txt
graphs/application/dfs_application/topological_sort/include/: topological_sort.hpp
graphs/application/graph_tasks/alien_alphabet/: CMakeLists.txt  main.cpp
graphs/application/graph_tasks/alien_alphabet/color_matrix/: fill_with_same_collor.hpp
graphs/application/graph_tasks/alien_alphabet/include/: add_to_graph.hpp  alien_alphabet.hpp  solution_with_topo_sort_implemented.hpp
graphs/application/graph_tasks/dijkstra/: CMakeLists.txt  Makefile  main.cpp
graphs/application/graph_tasks/dijkstra/include/: dijkstra.hpp
graphs/application/graph_tasks/graph_coloring/: CMakeLists.txt  Makefile  main.cpp
graphs/application/graph_tasks/graph_coloring/include/: colored_vertex.hpp  graph_coloring.hpp
graphs/traversals/depth_first_search/: CMakeLists.txt  main.cpp
graphs/traversals/depth_first_search/include/: dfs.hpp
graphs/traversals/dfs_application/edge_classification/: CMakeLists.txt
graphs/traversals/dfs_application/edge_classification/include/: edge_classification.hpp  vertex_ec.hpp
hackerrank/: easy_tasks.cpp  main.cpp
linked_list/: CMakeLists.txt
max_wealth_dp/: max_wealth.cpp
max_without_comparison/: main.cpp  max_without_comparison.cpp
merge_lists_median/: main.cpp
min_or_max_for_window/: CMakeLists.txt  main.cpp  min_for_window.cpp  min_for_window.hpp
multiply_number/: CMakeLists.txt  main.cpp  multiply_number.cpp  multiply_number.hpp
non_decreasing_interval/: CMakeLists.txt  main.cpp  non_decreasing_interval.hpp
pairs/: main.cpp
sentence_reverse/: CMakeLists.txt  main.cpp  sentence_reverse.cpp  sentence_reverse.hpp
shortest_subarray_sum/: CMakeLists.txt  main.cpp
sorting/: CMakeLists.txt  insertion_sort.cpp  main.cpp  merge_sort.cpp  merge_sort.hpp  selection_sort.cpp
string_permutations/: main.cpp  permutations_duplicates.cpp
substrings/: CMakeLists.txt  main.cpp  substrings.cpp
trees/binary_search_tree/application/equal_trees/: CMakeLists.txt  Makefile  main.cpp
trees/binary_search_tree/application/equal_trees/include/: equal_trees.hpp
trees/binary_search_tree/traversals/: CMakeLists.txt  Makefile  main.cpp
trees/binary_search_tree/traversals/include/: traversals.hpp
trees/weighted_tree/weighted_binary_tree/application/max_path_weighted_bst/: CMakeLists.txt  Makefile  main.cpp
trees/weighted_tree/weighted_binary_tree/application/max_path_weighted_bst/include/: max_path_wbst.hpp
(+348 files in other folders)
